[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rllte-hub"
version = "0.0.1.beta02"
authors = [
  { name="Reinforcement Learning Evolution Foundation", email="rlefoundation@gmail.com" },
]
description = "Model Hub of the Long-Term Evolution Project of Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Reinforcement Learning", "Algorithm", "Evolution", "Baseline", "Hub", "Datasets", "Models"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "huggingface_hub",
  "rllte-core",
  "numpy",
  "pandas"
]

[project.urls]
"Code" = "https://github.com/RLE-Foundation/rllte-hub"
"Documentation" = "https://docs.rllte.dev/"
"Benchmark" = "https://hub.rllte.dev/"
"Bug Tracker" = "https://github.com/RLE-Foundation/rllte-hub/issues"

[tool.ruff]
# Same as Black.
line-length = 127
# Assume Python 3.9
target-version = "py39"
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
# Ignore explicit stacklevel`
ignore = ["B028"]

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127
src_paths = ["hub"]

[tool.pytype]
inputs = ["hub"]
disable = ["pyi-error"]